--- a/ga_2_about_me/css/main.css
+++ b/ga_2_about_me/css/main.css
@@ -1,32 +1,32 @@
 body {
 
-	background-image: url('file:///Users/sambiddle/Desktop/GA/ga_2_about_me/img/bg2.jpg');
+	background-image: url('../img/bg2.jpg');
 	background-size: cover;
 }
+
+#IntroHeader {
+  font-family: "HelveticaNeue",sans-serif;
+  font-size: 60px;
+  font-weight: bold;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+
 
 .bio {
   font-size: 30px;
   font-family: "Didot";
   color: white;
-
+  text-align: left;
 }  
 
-.MoreInfo {
+.contact {
 	font-size: 20px;
- 	font-family: "Helvetica";
+ 	font-family: "HelveticaNeue";
  	color: white;
+  text-align: right;
 
  }
-  
-
-
-
-#IntroHeader {
-  font-family: "Helvetica";
-  font-size: 60px;
-  font-weight: bold;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
 
 a:link {
     font-style: italic;
