--- a/ga_3_fashion_blog/css/main.css
+++ b/ga_3_fashion_blog/css/main.css
@@ -1,56 +1,88 @@
+body {
+
+  font-family: 'lato', sans-serif;
+  font-size: 18px;
+  margin-right: 200px;
+  margin-left: 200px;
+}
+
+p#firstpara:first-letter{ 
+  float: left; 
+  color: grey; 
+  font-size: 4em; 
+  line-height: 60px; 
+  padding-top: 4px; 
+  padding-right: 8px; 
+  padding-left: 3px; }
+
+p#secondpara:first-letter{ 
+  float: left; 
+  color: grey; 
+  font-size: 4em; 
+  line-height: 60px; 
+  padding-top: 4px; 
+  padding-right: 8px; 
+  padding-left: 3px; }
+
+
 #header {
-	font-family: "Lato", sans-serif;
-	color: red;
-	font-size: 40px;
+	color: #DC143C;
+	font-size: 2.5em;
 	font-weight: 100;
-	margin-left: 20px;
 }
 
 #subheader {
-	font-family: "Lato", sans-serif;
-	font-size: 20px;
+	font-size: 1.4em;
 	font-weight: 100;
-	margin-left: 20px;
 }
-
-
 
 #topnav {
 	padding: 10px;
-	font-family: "Lato", sans-serif;
-	font-size: 25px;
+	font-size: 1.1em;
 	font-weight: 100;
-	
 
 }
 
 #topnav a {
 	margin-right: 10px;
+  color: gray;
+  padding-bottom: 2px;
+  text-decoration: none;
+  border-bottom: 2px solid grey;
 }
 
-
-p {
-	font-family: "Lato", sans-serif;
-
-}
 
 .continue {
 	color: red;
-	font-family: "Lato", sans-serif;
 	float: right;
 }
 
 .date {
 	color: gray;
-	font-family: "Lato", sans-serif;
-	font-size: 30px;
+	font-size: 2em;
 	font-weight: 100;
+  margin-bottom: 7px;
 
 }
 
 .postTitle {
 	font-family: "Lato", sans-serif;
-	font-size: 30px;
+	font-size: 2em;
 	font-weight: 300;
+  margin-top: 7px;
+  margin-bottom: 15px;
 
+}
+
+.heroImage {
+  height: 300px;
+  width: 100%;
+  background-color: gray;
+}
+
+#bottomnav a {
+  color: crimson;
+  font-weight: 100;
+  font-size: .8em;
+  text-decoration: none;
 }
