--- a/ga_4_traffic_light/css/main.css
+++ b/ga_4_traffic_light/css/main.css
@@ -1,57 +1,44 @@
-#box {
-  position: relative;
-  background-color: black;
-  height: 700px;
+body {
+  font-family: helvetica, sans-serif;
+}
+
+#lightBox {
   width: 300px;
-  padding: 20px;
+  height: 500px;
+  background-color: black;
+  border-radius: 10px;
+  padding-top: 20px;
+  float: left;
 }
 
-.green {
-  background-color: green;
-  opacity: .3;
+.button {
+  background-color: grey;
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 9px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: white;
+}
+
+#controls {
   width: 200px;
-  height: 200px;
+  text-align: center;
+  float: left;
+  margin-left: 10px;
+  padding: 10px;
+}
+
+.light {
   border-radius: 50%;
-  margin: 0 auto;
-  margin-top: 30px;
-
+  background-color: black;
+  height: 150px;
+  width: 150px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 10px;
+  border: 1px solid white;
 }
 
-.red {
-  background-color: red;
-  opacity: .3;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  margin: 0 auto;
-  margin-top: 30px;
-
-}
-
-.yellow {
-  background-color: yellow;
-  opacity: .3;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  margin: 0 auto;
-  margin-top: 30px;
-  
-}
-
-.red:hover {
-  opacity: 1;
-   border: 1px solid;
-    box-shadow: 0 0 30px red;
-}
-
-.yellow:hover {
-  opacity: 1;
-  border: 1px solid;
-  box-shadow: 0 0 30px yellow;
-}
-
-.green:hover {
-  opacity: 1;
-  border: 1px solid;
-  box-shadow: 0 0 30px green;
