--- a/ga_6_gallery/css/main.css
+++ b/ga_6_gallery/css/main.css
@@ -1,6 +1,52 @@
-.galleryContainer {
-	background-color: lightgrey;
-	width: 800px;
-	height: 500px;
+body {
+	font-family: Helvetica, Georgia, sans-serif;
+	color: white;
+}
 
+#thumbs {
+	position: absolute;
+	width: 100%;
+	height: 80px;
+}
+
+#mainImg img {
+	width: 100%;
+
+}
+
+#mainContainer{
+    position: relative;
+    height: 700px;
+    width: 100%;
+    background-color: gray;
+}
+
+.thumb {
+	display: inline-block;
+	width: 80px;
+	height: 80px;
+	background-color: black;
+	cursor: pointer;
+	overflow: hidden;
+	border: 2px white solid;
+}
+
+.thumb img {
+	height: 80px;
+}
+
+.thumb:hover {
+	opacity: .7;
+}
+
+.btn {
+	position: relative;
+	background-color: black;
+	padding: 20px;
+	border: 1px solid white;
+}
+
+.btn:hover {
+	cursor: pointer;
+	opacity: .7;
 }
